--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup> Institute of Technology Kharagpur, India<br><sup>2</sup>Microsoft Corporation, India<br><sup>3</sup>Singapore University of Technology and Design, Singapore<br>
-                      <a href="https://2025.naacl.org/">NAACL Main 2025</a></span>
+                    <span class="author-block"><sup>1</sup> Institute of Technology Kharagpur, India<br><sup>2</sup>Microsoft Corporation, India<br><sup>3</sup>INSAIT, Sofia University "St. Kliment Ohridski"<br>
+                      <a href="https://2025.naacl.org/">NAACL 2025</a> (Main track)</span>
                     <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                   </div>
 
