--- a/index.html
+++ b/index.html
@@ -490,6 +490,7 @@
       To prepare the preference dataset, we follow a procedure similar to that used for the cultural safety dataset, generating questions for both global and local sets. Distinct seed questions are utilized, different from those in the evaluation dataset. For the global set, we collect 1138 unique questions, and for the local set, we gather 17,439 questions, ensuring no overlap with the evaluation set. 
       Along with harmful questions, we also sample ~6700 safe questions plus their answers from the <br>cultural bank dataset. Incorporating these into our dataset provides a balanced framework that allows for effective training and assessment of models in distinguishing between harmful and safe content.
     </p>
+    <img src="static/images/pref1.png" width="800" height="400" style="margin: 20px auto;" />
     <div class="container">
       <table class="table table-borderless">
         <tr>
